--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "mdast"
   ],
   "dependencies": {
-    "mdast-yaml": "^1.0.0"
+    "mdast-yaml": "^2.0.0-alpha.1"
   },
   "repository": "wooorm/mdast-yaml-config",
   "author": "Titus Wormer <tituswormer@gmail.com>",
@@ -25,10 +25,10 @@
     "istanbul": "^0.3.0",
     "jscs": "^2.0.0",
     "jscs-jsdoc": "^1.0.0",
-    "mdast": "^1.0.0",
-    "mdast-github": "^0.3.0",
-    "mdast-lint": "^0.4.0",
-    "mdast-toc": "^0.5.0",
+    "mdast": "^3.0.0-alpha.3",
+    "mdast-github": "^2.0.0-alpha.1",
+    "mdast-lint": "^2.0.0-alpha.1",
+    "mdast-toc": "^1.0.0",
     "mdast-usage": "^0.3.0",
     "mocha": "^2.0.0"
   },
