--- a/.eslintignore
+++ b/.eslintignore
@@ -3,5 +3,5 @@ components/
 coverage/
 build.js
 example.js
-mdast-yaml-config.js
-mdast-yaml-config.min.js
+remark-yaml-config.js
+remark-yaml-config.min.js
