--- a/bower.json
+++ b/bower.json
@@ -1,18 +1,18 @@
 {
-  "name": "mdast-yaml-config",
-  "main": "mdast-yaml-config.js",
-  "description": "Configure mdast with YAML front-matter",
+  "name": "remark-yaml-config",
+  "main": "remark-yaml-config.js",
+  "description": "Configure remark with YAML front-matter",
   "license": "MIT",
   "keywords": [
     "yaml",
     "options",
     "config",
     "settings",
-    "mdast"
+    "remark"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/wooorm/mdast-yaml-config.git"
+    "url": "https://github.com/wooorm/remark-yaml-config.git"
   },
   "authors": [
     "Titus Wormer <tituswormer@gmail.com>"
