--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "remark"
   ],
   "dependencies": {
-    "remark-yaml": "^2.0.0"
+    "js-yaml": "^3.5.2"
   },
   "repository": "wooorm/remark-yaml-config",
   "author": "Titus Wormer <tituswormer@gmail.com>",
@@ -19,15 +19,15 @@
     "index.js"
   ],
   "devDependencies": {
-    "browserify": "^12.0.0",
+    "browserify": "^13.0.0",
     "eslint": "^1.0.0",
     "esmangle": "^1.0.0",
     "istanbul": "^0.4.0",
     "jscs": "^2.0.0",
     "jscs-jsdoc": "^1.0.0",
-    "remark": "^3.0.0",
-    "remark-comment-config": "^2.0.2",
-    "remark-github": "^2.0.0",
+    "remark": "^4.0.0-alpha.4",
+    "remark-comment-config": "^3.0.0-alpha.1",
+    "remark-github": "^4.0.1",
     "remark-lint": "^2.0.0",
     "remark-slug": "^4.0.0",
     "remark-usage": "^2.0.0",
