--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,18 @@ node_js:
 sudo: false
 after_script: npm install codecov.io && cat ./coverage/lcov.info | codecov
 deploy:
-  provider: releases
-  api_key:
-    secure: P6zTOafeMF3tVmK/GdNZ1tnJH4sioRN3s0VWfCepazy7RGBd/Gv3eI4Vgg/N4Y9ulacCKqJYGJYbS+qOrJBTYpZU+bo5dL/ftN5YN5TjGApxA9/E/v84NGUXWVq2D5qDQBKyj5k7ykkpQDpD/41IxAeeVyGLosYkUIcIvXomtcI=
-  file:
-    - "remark-yaml-config.js"
-    - "remark-yaml-config.min.js"
-  on:
-    tags: true
+  - provider: npm
+    email: tituswormer@gmail.com
+    api_key:
+      secure: lQfUtgnBXsX+HZlwTRYdcvTEI1T/axHQWJaFESdSaDSUn4j2NzTQRq/L6zy6GPj1RW5j3qvRpINcatvLzaJWo7nnBb6x16tK1OYzszagdVIyYHLip9DlSoxuHlPi52fbzdnOs2x1OELpo4D8lJJjXXq3zpjRNiHjfWKrBaq+cYE=
+    on:
+      tags: true
+      node: '5.0'
+  - provider: releases
+    api_key:
+      secure: P6zTOafeMF3tVmK/GdNZ1tnJH4sioRN3s0VWfCepazy7RGBd/Gv3eI4Vgg/N4Y9ulacCKqJYGJYbS+qOrJBTYpZU+bo5dL/ftN5YN5TjGApxA9/E/v84NGUXWVq2D5qDQBKyj5k7ykkpQDpD/41IxAeeVyGLosYkUIcIvXomtcI=
+    file:
+      - "remark-yaml-config.js"
+      - "remark-yaml-config.min.js"
+    on:
+      tags: true
