--- a/package.json
+++ b/package.json
@@ -39,11 +39,13 @@
     "remark-cli": "^1.0.0",
     "remark-comment-config": "^4.0.0",
     "remark-github": "^5.0.0-alpha.1",
+    "remark-html": "^4.0.0",
     "remark-lint": "^4.0.0",
     "remark-slug": "^4.0.0",
     "remark-usage": "^4.0.0-alpha.1",
     "remark-validate-links": "^4.0.0-alpha.1",
-    "tape": "^4.0.0"
+    "tape": "^4.0.0",
+    "unified": "^4.1.2"
   },
   "scripts": {
     "build-bundle": "browserify --no-builtins index.js -s remarkYAMLConfig > remark-yaml-config.js",
