Update code-style to use xo
...and update dev-dependencies

--- a/package.json
+++ b/package.json
@@ -10,53 +10,66 @@
     "settings",
     "remark"
   ],
-  "dependencies": {
-    "js-yaml": "^3.5.2"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/wooorm/remark-yaml-config.git"
-  },
+  "repository": "https://github.com/wooorm/remark-yaml-config",
   "bugs": "https://github.com/wooorm/remark-yaml-config/issues",
   "author": "Titus Wormer <tituswormer@gmail.com> (http://wooorm.com)",
   "contributors": [
     "Titus Wormer <tituswormer@gmail.com> (http://wooorm.com)"
   ],
   "engines": {
-    "node": ">=0.10.0"
+    "node": ">=0.11.0"
   },
   "files": [
     "index.js"
   ],
+  "dependencies": {
+    "js-yaml": "^3.5.2"
+  },
   "devDependencies": {
     "browserify": "^13.0.0",
-    "eslint": "^2.0.0",
     "esmangle": "^1.0.0",
-    "istanbul": "^0.4.0",
-    "jscs": "^3.0.0",
-    "jscs-jsdoc": "^2.0.0",
-    "remark": "^5.0.0",
-    "remark-cli": "^1.0.0",
-    "remark-comment-config": "^4.0.0",
-    "remark-github": "^5.0.0-alpha.1",
-    "remark-html": "^4.0.0",
-    "remark-lint": "^4.0.0",
-    "remark-slug": "^4.0.0",
-    "remark-usage": "^4.0.0-alpha.1",
-    "remark-validate-links": "^4.0.0-alpha.1",
+    "nyc": "^8.1.0",
+    "remark": "^6.0.0",
+    "remark-cli": "^2.0.0",
+    "remark-html": "^5.0.1",
+    "remark-preset-wooorm": "^1.0.0",
+    "remark-usage": "^4.0.1",
     "tape": "^4.0.0",
-    "unified": "^4.1.2"
+    "unified": "^5.0.0",
+    "xo": "^0.16.0"
   },
   "scripts": {
     "build-bundle": "browserify --no-builtins index.js -s remarkYAMLConfig > remark-yaml-config.js",
     "build-mangle": "esmangle remark-yaml-config.js > remark-yaml-config.min.js",
     "build-md": "remark . --quiet --frail",
     "build": "npm run build-md && npm run build-bundle && npm run build-mangle",
-    "lint-api": "eslint .",
-    "lint-style": "jscs --reporter inline .",
-    "lint": "npm run lint-api && npm run lint-style",
+    "lint": "xo",
     "test-api": "node test.js",
-    "test-coverage": "istanbul cover test.js",
+    "test-coverage": "nyc --reporter lcov tape test/index.js",
     "test": "npm run build && npm run lint && npm run test-coverage"
+  },
+  "nyc": {
+    "check-coverage": true,
+    "lines": 100,
+    "functions": 100,
+    "branches": 100
+  },
+  "xo": {
+    "space": true,
+    "rules": {
+      "guard-for-in": "off",
+      "no-eq-null": "off",
+      "eqeqeq": "off"
+    },
+    "ignores": [
+      "remark-yaml-config.js"
+    ]
+  },
+  "remarkConfig": {
+    "output": true,
+    "presets": "wooorm",
+    "plugins": [
+      "usage"
+    ]
   }
 }
