--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "browserify": "^14.0.0",
     "esmangle": "^1.0.0",
     "nyc": "^10.0.0",
-    "remark": "^6.0.0",
-    "remark-cli": "^2.0.0",
-    "remark-html": "^5.0.1",
-    "remark-preset-wooorm": "^1.0.0",
+    "remark": "^7.0.0",
+    "remark-cli": "^3.0.0",
+    "remark-html": "^6.0.0",
+    "remark-preset-wooorm": "^2.0.0",
     "tape": "^4.0.0",
     "unified": "^5.0.0",
     "xo": "^0.17.1"
@@ -37,7 +37,7 @@
   "scripts": {
     "build-bundle": "browserify --no-builtins index.js -s remarkYAMLConfig > remark-yaml-config.js",
     "build-mangle": "esmangle remark-yaml-config.js > remark-yaml-config.min.js",
-    "build-md": "remark . --quiet --frail",
+    "build-md": "remark . -qfo",
     "build": "npm run build-md && npm run build-bundle && npm run build-mangle",
     "lint": "xo",
     "test-api": "node test.js",
@@ -62,7 +62,6 @@
     ]
   },
   "remarkConfig": {
-    "output": true,
-    "presets": "wooorm"
+    "plugins": ["preset-wooorm"]
   }
 }
