--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   ],
   "repository": "remarkjs/remark-yaml-config",
   "bugs": "https://github.com/remarkjs/remark-yaml-config/issues",
-  "author": "Titus Wormer <tituswormer@gmail.com> (http://wooorm.com)",
+  "author": "Titus Wormer <tituswormer@gmail.com> (https://wooorm.com)",
   "contributors": [
-    "Titus Wormer <tituswormer@gmail.com> (http://wooorm.com)"
+    "Titus Wormer <tituswormer@gmail.com> (https://wooorm.com)"
   ],
   "files": [
     "index.js"
