--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
     "browserify": "^16.0.0",
     "nyc": "^15.0.0",
     "prettier": "^2.0.0",
-    "remark": "^12.0.0",
+    "remark": "^13.0.0-alpha.1",
     "remark-cli": "^8.0.0",
-    "remark-frontmatter": "^2.0.0",
+    "remark-frontmatter": "^3.0.0",
     "remark-html": "^13.0.0",
     "remark-preset-wooorm": "^7.0.0",
     "tape": "^5.0.0",
