--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "js-yaml": "^3.5.2"
   },
   "devDependencies": {
-    "browserify": "^17.0.0",
     "nyc": "^15.0.0",
     "prettier": "^2.0.0",
     "remark": "^13.0.0",
@@ -42,18 +41,14 @@
     "remark-html": "^13.0.0",
     "remark-preset-wooorm": "^8.0.0",
     "tape": "^5.0.0",
-    "tinyify": "^3.0.0",
     "unified": "^9.0.0",
     "xo": "^0.37.0"
   },
   "scripts": {
     "format": "remark . -qfo && prettier . -w --loglevel warn && xo --fix",
-    "build-bundle": "browserify . -s remarkYamlConfig > remark-yaml-config.js",
-    "build-mangle": "browserify . -s remarkYamlConfig -p tinyify > remark-yaml-config.min.js",
-    "build": "npm run build-bundle && npm run build-mangle",
     "test-api": "node test",
     "test-coverage": "nyc --reporter lcov tape test.js",
-    "test": "npm run format && npm run build && npm run test-coverage"
+    "test": "npm run format && npm run test-coverage"
   },
   "nyc": {
     "check-coverage": true,
@@ -76,10 +71,7 @@
       "guard-for-in": "off",
       "no-eq-null": "off",
       "eqeqeq": "off"
-    },
-    "ignores": [
-      "remark-yaml-config.js"
-    ]
+    }
   },
   "remarkConfig": {
     "plugins": [
