--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "unified": "^10.0.0"
   },
   "devDependencies": {
-    "@types/tape": "^5.0.0",
+    "@types/node": "^20.0.0",
     "c8": "^8.0.0",
     "prettier": "^3.0.0",
     "remark": "^14.0.0",
@@ -49,7 +49,6 @@
     "remark-frontmatter": "^4.0.0",
     "remark-html": "^15.0.0",
     "remark-preset-wooorm": "^9.0.0",
-    "tape": "^5.0.0",
     "type-coverage": "^2.0.0",
     "typescript": "^5.0.0",
     "xo": "^0.56.0"
