--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
   ],
   "dependencies": {
     "@types/mdast": "^4.0.0",
-    "js-yaml": "^4.0.0",
-    "unified": "^11.0.0"
+    "unified": "^11.0.0",
+    "yaml": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
